feat(panning): 添加淘盘与闪烁的光淘洗玩法
新增铜制工具淘盘与专属淘洗点实体「闪烁的光」，构成河流水域的新采集
玩法：对准闪烁的光长按 8 秒完成一次淘洗，消耗 1 点耐久并抽取淘洗战利
品表，产出接入考古笔记（新增「淘筛采集」目录分类）。

- 闪烁的光依附水方块存在，被方块占位或水被破坏即消散；自然生成每维
  度上限 5 个、寿命 20~40 分钟且仅在加载时计时，世界生成来源不消散也
  不计上限，两者由每维度 SavedData 账本统一维护数量、间距与来源
- 世界生成判定按世界种子确定性计算，账本只记录真正生成过的区块，避
  免随探索范围无限增长
- 淘洗中断（松手或准星离开）不消耗任何资源；淘盘可在铁砧用铜锭修复
  并兼容通用附魔
- 实体注册清单泛型由 LivingEntity 放宽至 Entity，以支持无默认属性的
  非生物实体；新增 IPanningConfig 配置 SPI 及双平台实现